added table of measured and model slopes

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -107,7 +107,7 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
   thermally driven atmospheric mass loss may not dominate the evolution of planets in the low stellar mass
   regime or that we are witnessing the emergence of a separate channel of planet formation.
   The latter notion is supported by the relative occurrence of rocky to non-rocky planets
-  which increases from $0.5\pm 0.1$ to $8.5\pm 4.6$ from mid-K to mid-M dwarfs.
+  which increases from $0.5\pm 0.1$ around mid-K dwarfs to $8.5\pm 4.6$ around mid-M dwarfs.
   Furthermore, the location of the radius valley features are shown to shift to smaller sizes with
   decreasing stellar mass in agreement with physical models of photoevaporation,
   core-powered mass loss, and gas-poor formation. Although current measurements are
@@ -125,7 +125,7 @@ NASA's \kepler{} space telescope has discovered thousands of exoplanets over its
 consequently enabled robust investigations of the occurrence rate of planets within our galaxy.
 One striking outcome of such studies was that the so-called super-Earths and sub-Neptunes---whose
 radii span sizes intermediate between those of the Earth and Neptune---represent the most common
-type of planet around Sun-like stars and early M dwarfs alike
+type of planet around Sun-like stars and M dwarfs alike
 \citep[e.g.][]{youdin11,howard12,dressing13,fressin13,petigura13b,morton14,dressing15a,mulders15a,gaidos16,fulton17,hardegree19}.
 Furthermore, mass measurements of many of these transiting planets via transit-timing variations
 or precision radial velocity measurements revealed that the majority of planets
@@ -162,7 +162,7 @@ resolved the radius valley among small close-in planets orbiting Sun-like stars.
 A variety of trends were also observed in either
 the raw or in the completeness-corrected (i.e. the occurrence rate) distributions. Firstly,
 the location of the radius valley around FGK stars is period-dependent with slope
-$\mathrm{d}\log{r_p} / \mathrm{d}\log{P} \sim -0.1$ \citep{vaneylen18,martinez19}, a result that is consistent
+$\mathrm{d}\log{r_p} / \mathrm{d}\log{P} \sim -0.1$ \citep{vaneylen18,martinez19}. This result is consistent
 with both photoevaporation and core-powered mass loss models but is largely inconsistent with the late formation
 of terrestrial planets in a gas-poor environment. Secondly, the feature locations (i.e. the weighted
 average radius of the peaks and valley) appear to exist at smaller planet radii with decreasing stellar
@@ -171,25 +171,25 @@ mass \citep{fulton18,wu19}.
 In this study, we extend the investigation of the occurrence rate of small close-in planets to the low mass
 stellar regime by considering planetary systems hosted by low mass dwarf stars later than mid-K dwarfs.
 The empirical population of known planets in this stellar mass regime features nearly an order of magnitude
-fewer planets than around Sun-like stars thus making the detection of the radius valley more
+fewer planets than around Sun-like stars thus making the clear detection of the radius valley more
 difficult and at a lower signal-to-noise. This fact is clearly evidenced in the empirical \kepler{} planet population
 for which the radius valley around Sun-like stars (\teff{} $\in [4700,6500]$ K) is clearly exhibited whereas a similar
-feature around low mass stars (\teff{} $< 4700$ K) is not easily discernible by-eye (\autoref{fig:berger} based on
-the data from \citealt{berger18}). This study leverages the precise stellar parallaxes from the \gaia{} DR2
+feature around low mass stars (\teff{} $< 4700$ K) is not easily discernible by eye (\autoref{fig:berger} based on
+the data from \citealt{berger18}). Herein we leverage the precise stellar parallaxes from the \gaia{} DR2
 for low mass stars observed by \kepler{} and \ktwo{} to refine the stellar parameters and compute precise
 occurrence rates of close-in planets with the goal of resolving the radius valley and accurately measuring the
-location of the radius valley features and their uncertainties. Although it is unlikely that a single physical
+locations of its features and their uncertainties. Although it is unlikely that a single physical
 mechanism is solely responsible for sculpting the radius valley, investigation the evolution of the valley features
 with stellar mass can allude to which process---if any---dominates the evolution of close-in planets.
 
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/Bergerplanethist.png}
+  %\includegraphics[width=0.98\hsize]{figures/Bergerplanethist.png}
   \caption{Empirical distributions of \kepler{} planet radii. Histograms of \kepler{} planet radii
     from \cite{berger18} for planets with host stellar effective temperatures \teff{} $\in [4700,6500]$ K
     (\emph{blue}) and \teff{} $<4700$ K (\emph{red}). The former subset of 2816 planets corresponds to the
-    effective temperature range considered in the California Kepler Survey \citep[CKS;][]{fulton17}
+    effective temperature range considered in the California Kepler Survey \citep{fulton17}
     wherein the radius valley is clearly
     resolved in the empirical distribution even without completeness corrections. A similar bimodal
     structure is not resolved in the empirical distribution of the latter subset around low mass stars
@@ -268,7 +268,7 @@ $M_s$ is $\sim 5.5$\%.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/stellar_corner_KepandK2.png}
+  %\includegraphics[width=0.98\hsize]{figures/stellar_corner_KepandK2.png}
   \caption{Low mass dwarf stellar samples from \kepler{} and \ktwo{.} Distributions of \kepler{} magnitudes,
     effective temperatures, stellar radii, and stellar masses for stars in our final stellar sample from either
     \kepler{} (\emph{blue histogram and markers}) or \ktwo{} (\emph{red histogram and markers}).}
@@ -396,12 +396,12 @@ measurement uncertainties and with a fractional precision on $P$ inflated to 20\
 
 \begin{figure*}
   \centering
-  \includegraphics[width=\hsize]{figures/Ndetmap_map_Msgt0d0_xbin45_ybin27.png}%
+  %\includegraphics[width=\hsize]{figures/Ndetmap_map_Msgt0d0_xbin45_ybin27.png}%
   \hspace{-\hsize}%
   \begin{ocg}{fig:offNd}{fig:offNd}{0}%
   \end{ocg}%
   \begin{ocg}{fig:onNd}{fig:onNd}{1}%
-  \includegraphics[width=\hsize]{figures/Ndetmap_kepk2_Msgt0d0_xbin45_ybin27.png}%
+  %\includegraphics[width=\hsize]{figures/Ndetmap_kepk2_Msgt0d0_xbin45_ybin27.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \caption{(\emph{Interactive figure}) Empirical population of confirmed close-in planets around low mass stars.
@@ -486,7 +486,7 @@ are shown in \autoref{fig:senscurves}.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/MES_SNR.png}
+  %\includegraphics[width=0.98\hsize]{figures/MES_SNR.png}
   \caption{Correlation between the \kepler{} multi-event statistic and transit S/N. The mapping between the MES and
     S/N based on the synthetic planetary signals injected into the \kepler{} pipeline \citep{christiansen15}.
     The number-weighted powerlaw fit (\emph{solid line}) to the correlation differs slightly from a one-to-one relation
@@ -497,7 +497,7 @@ are shown in \autoref{fig:senscurves}.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/senscurves.png}
+  %\includegraphics[width=0.98\hsize]{figures/senscurves.png}
   \caption{Average detection sensitivity for \kepler{} and \ktwo{.} The \emph{solid curves} represent the
     average transiting planet detection sensitivity for the \kepler{} and \ktwo{} stars in our sample as
     a function of the transit S/N (Eq.~\ref{eq:snr}). The shaded regions mark the 16$^{th}$ and 84$^{th}$
@@ -595,7 +595,7 @@ averaged over the index $n$, are shown in \autoref{fig:sensmap}.
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/sensmap.png}
+  %\includegraphics[width=0.98\hsize]{figures/sensmap.png}
   \caption{Average detection sensitivity versus orbital period and planetary radius.
     The detection sensitivity maps averaged over \kepler{} stars (\emph{left panel)} and over \ktwo{} stars
     (\emph{right panel}) from our sample of low mass dwarf stars.} 
@@ -622,7 +622,7 @@ shown in \autoref{fig:compmap}.
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/compmap.png}
+  %\includegraphics[width=0.98\hsize]{figures/compmap.png}
   \caption{Average completeness versus orbital period and planetary radius.
     Maps of the product of the detection sensitivity and geometric transit probability averaged over \kepler{} stars
     (\emph{left panel)} and over \ktwo{} stars (\emph{right panel}) from our sample of low mass dwarf stars.} 
@@ -703,24 +703,24 @@ $r_p\in [0.5,4]$ R$_{\oplus}$.
 
 \begin{figure*}
   \centering
-  \includegraphics[width=.9\hsize]{figures/fmap_bkgd_Msgt0d0_xbin39_ybin26.png}%
+  %\includegraphics[width=.9\hsize]{figures/fmap_bkgd_Msgt0d0_xbin39_ybin26.png}%
   \hspace{-.9\hsize}%
   \begin{ocg}{fig:off3}{fig:off3}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on3}{fig:on3}{1}%
-  \includegraphics[width=.9\hsize]{figures/fmap_kepk2_Msgt0d0_xbin39_ybin26.png}%
+  %\includegraphics[width=.9\hsize]{figures/fmap_kepk2_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-.9\hsize}%
   \begin{ocg}{fig:off1}{fig:off1}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on1}{fig:on1}{1}%
-  \includegraphics[width=.9\hsize]{figures/fmap_curve_Msgt0d0_xbin39_ybin26.png}%
+  %\includegraphics[width=.9\hsize]{figures/fmap_curve_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-.9\hsize}%
   \begin{ocg}{fig:off4}{fig:off4}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4}{fig:on4}{1}%
-  \includegraphics[width=.9\hsize]{figures/fmap_planets_Msgt0d0_xbin39_ybin26.png}%
+  %\includegraphics[width=.9\hsize]{figures/fmap_planets_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-.9\hsize}%
   \caption{(\emph{Interactive figure}) Planet occurrence rate versus orbital period and planetary radius. The maximum a-posteriori occurrence
@@ -790,7 +790,7 @@ $r_p\lesssim 1$ R$_{\oplus}$ where the detection sensitivity is poor.
   
 \begin{figure*}
   \centering
-  \includegraphics[scale=.8]{figures/rphist_double.png}
+  %\includegraphics[scale=.8]{figures/rphist_double.png}
   \caption{Occurrence rate of planets as a function of size. \emph{Upper panel}:
     histogram depicting the relative occurrence
     rate of close-in planets with orbital periods $<100$ days derived from the population of confirmed
@@ -876,7 +876,7 @@ for the remainder of this study.
 
 \begin{figure*}
   \centering
-  \includegraphics[scale=.8]{figures/rphist_kruse.png}
+  %\includegraphics[scale=.8]{figures/rphist_kruse.png}
   \caption{Comparison of occurrence rates with and without planet candidates included. \emph{Left panel}:
     same as \autoref{fig:rphist}. \emph{Right panel}: histogram depicting the relative occurrence
     rate of close-in planets with orbital periods $<100$ days derived from the population of confirmed
@@ -923,37 +923,41 @@ occurrence rates (and their fractional uncertainties at each point $ij$) over th
 $F\in [1,30]$ F$_{\oplus}$ and $r_p\in [1,2.5]$ R$_{\oplus}$.
 Each domain is defined to neglect regions far from the radius valley that would otherwise dominate the
 inverse occurrence rates. The number of sampled planets in the $\log{F}-r_p$ space is then fit with a
-linear function as depicted in \autoref{fig:fmapF}. Over the $10^3$ realizations of the resampled planet
-population we measure an average slope and standard deviation of
-$\text{d}r_p / \text{d}\log{F} = -0.123\pm 0.054$. Similarly, repeating this exercise in the $P-r_p$
-space yields $\text{d}r_p / \text{d}\log{P} = 0.085\pm 0.074$.
+linear function as depicted in \autoref{fig:fmapF}. Over the $10^3$ realizations of resampled planet
+populations, we measure an average slope and standard deviation of
+$\text{d}r_p / \text{d}\log{F} = -0.12\pm 0.05$. Similarly, repeating this exercise in the $P-r_p$
+space yields $\text{d}r_p / \text{d}\log{P} = 0.11\pm 0.08$. For ease of reference, the slopes measured
+in this work and around FGK stars from the CKS \citep{martinez19} are reported in
+Table~\autoref{table:slopes}.
+
+\input{slopetable}
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.85\hsize]{figures/fmapFmart_bkgd_Msgt0d0_xbin39_ybin26_insolation.png}%
+  %\includegraphics[width=0.85\hsize]{figures/fmapFmart_bkgd_Msgt0d0_xbin39_ybin26_insolation.png}%
   \hspace{-0.85\hsize}%
   \begin{ocg}{fig:off1F}{fig:off1F}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on1F}{fig:on1F}{1}%
-  \includegraphics[width=0.85\hsize]{figures/fmapFmart_kepk2_Msgt0d0_xbin39_ybin26_insolation.png}%
+  %\includegraphics[width=0.85\hsize]{figures/fmapFmart_kepk2_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
   \begin{ocg}{fig:off2F}{fig:off2F}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on2F}{fig:on2F}{1}%
-  \includegraphics[width=0.85\hsize]{figures/fmapFmart_slope_Msgt0d0_xbin39_ybin26_insolation.png}%
+  %\includegraphics[width=0.85\hsize]{figures/fmapFmart_slope_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
   \begin{ocg}{fig:off3F}{fig:off3F}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on3F}{fig:on3F}{1}%
-  \includegraphics[width=0.85\hsize]{figures/fmapFmart_models_Msgt0d0_xbin39_ybin26_insolation.png}%
+  %\includegraphics[width=0.85\hsize]{figures/fmapFmart_models_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
   \begin{ocg}{fig:off4F}{fig:off4F}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4F}{fig:on4F}{1}%
-  \includegraphics[width=0.85\hsize]{figures/fmapFmart_planets_Msgt0d0_xbin39_ybin26_insolation.png}%
+  %\includegraphics[width=0.85\hsize]{figures/fmapFmart_planets_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
   \caption{(\emph{Interactive figure})
@@ -967,7 +971,7 @@ space yields $\text{d}r_p / \text{d}\log{P} = 0.085\pm 0.074$.
     planets in the following scenarios: core-powered mass loss \citep{gupta19b}, photoevaporation
     \citep{lopez18}, and gas-poor formation \cite{lopez18}. We measure the
     \ToggleLayer{fig:on2F,fig:off2F}{\protect\cdbox{slope of the radius valley}}
-    to be $\text{d}r_p / \text{d}\log{F} = -0.123\pm 0.054$ which is consistent with predictions
+    to be $\text{d}r_p / \text{d}\log{F} = -0.12\pm 0.05$ which is consistent with predictions
     from gas-poor formation of terrestrial planets. Also overplotted are
     \ToggleLayer{fig:on4F,fig:off4F}{\protect\cdbox{planets}}
     with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
@@ -980,7 +984,7 @@ space yields $\text{d}r_p / \text{d}\log{P} = 0.085\pm 0.074$.
   \label{fig:fmapF}
 \end{figure*}
 
-The negative slope of $\text{d}r_p / \text{d}\log{F} = -0.123$ indicates that the location of the radius valley
+The negative slope of $\text{d}r_p / \text{d}\log{F} = -0.12$ indicates that the location of the radius valley
 drops to smaller planet radii with increasing insolation (i.e. towards smaller orbital separations).
 This behavior
 is broadly consistent with models of the formation small rocky planets in a gas-poor environment
@@ -1000,7 +1004,7 @@ $r_{p,\text{valley}} \propto a^{0.16} M_s^{-0.14}$ after applying the rocky plan
 for a given host spectral type \citep{lopez18}. The corresponding theoretical scaling of the transition
 radius with insolation for a given spectral type is $r_{p,\text{valley}} \propto F^{-0.08}$
 \citep{lopez18} which is 
-consistent with our measured scaling between $r_{p,\text{valley}}$ and $\log{F}$ of $-0.123\pm 0.054$.
+consistent with our measured scaling between $r_{p,\text{valley}}$ and $\log{F}$ of $-0.12\pm 0.05$.
 
 In addition to being consistent with predictions from gas-poor terrestrial planet formation models,
 our slope measurements are inconsistent with models of thermally driven atmospheric
@@ -1045,12 +1049,12 @@ M$_{\odot}$ (i.e. $\sim 62$\% of our confirmed planet sample).
 
 \begin{figure*}
   \centering
-  \includegraphics[width=.98\hsize]{figures/rphist_bkgd_compMs.png}%
+  %\includegraphics[width=.98\hsize]{figures/rphist_bkgd_compMs.png}%
   \hspace{-.98\hsize}%
   \begin{ocg}{fig:off4r}{fig:off4r}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4r}{fig:on4r}{1}%
-  \includegraphics[width=.98\hsize]{figures/rphist_kepk2_compMs.png}%
+  %\includegraphics[width=.98\hsize]{figures/rphist_kepk2_compMs.png}%
   \end{ocg}
   \hspace{-.98\hsize}%
   \caption{2D and 1D planet occurrence rates in various stellar mass bins. \emph{Top panels}: planet occurrence
@@ -1147,30 +1151,30 @@ rocky to non-rocky planets despite the latter being inherently rare around these
 
 \begin{figure*}
   \centering
-  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_bkgd.png}%
+  %\includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_bkgd.png}%
   \hspace{-.97\hsize}%
   \begin{ocg}{fig:off4M}{fig:off4M}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4M}{fig:on4M}{1}%
-  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_models.png}%
+  %\includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_models.png}%
   \end{ocg}
   \hspace{-.97\hsize}%
   \begin{ocg}{fig:off1M}{fig:off1M}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on1M}{fig:on1M}{1}%
-  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_FP18.png}%
+  %\includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_FP18.png}%
   \end{ocg}
   \hspace{-.97\hsize}%
   \begin{ocg}{fig:off3M}{fig:off3M}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on3M}{fig:on3M}{1}%
-  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_bin.png}%
+  %\includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_bin.png}%
   \end{ocg}
   \hspace{-.97\hsize}%
   \begin{ocg}{fig:off2M}{fig:off2M}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on2M}{fig:on2M}{1}%
-  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_Ms.png}%
+  %\includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_Ms.png}%
   \end{ocg}
   \hspace{-.97\hsize}%
   \caption{(\emph{Interactive figure}) Evolution of the radius valley features with stellar mass. \emph{Solid markers}:
@@ -1239,108 +1243,6 @@ the detection sensitivity to planets spanning the radius valley (see Sect.~\ref{
 
 
 \section{Discussion} \label{sect:discussion}
-\subsection{Implications for RV planet searches around low mass stars}
-Many existing and up-coming RV spectrographs
-will be partially focused on characterizing the masses of planets spanning the radius valley in order to
-improve our physical understanding of the nature of those planets. In particular, a subset of those spectrographs
-operating in the near-IR will focus heavily on M dwarf planetary systems
-(e.g. CARMENES; \citealt{quirrenbach14}, HPF; \citealt{mahadevan12}, IRD; \citealt{kotani14},
-NIRPS; \citealt{bouchy17}, SPIRou; \citealt{donati18}). In defining target samples
-that are equally complete on either side of the radius valley, it is critically important that the location
-of the transition between rocky and non-rocky planets is known. In our full stellar sample, which includes
-mid-to-late K dwarfs, the radius valley is centered at $1.54\pm 0.16$ R$_{\oplus}$. Although we remind the
-reader that the exact value is dependent on the planet's separation (see \autoref{fig:fmapF}). A consistent value of
-$1.55^{+0.52}_{-0.50}$ is also recovered---albeit with reduced significance---around stars later than about M2.5V.
-This value is slightly lower than the valley locations measured around Sun-like stars of
-$\sim 1.9$ R$_{\oplus}$ for $M_s \sim 1.2$ M$_{\odot}$ and $\sim 1.7$ R$_{\oplus}$ for $M_s \sim 0.85$ M$_{\odot}$
-\citep{fulton18}.
-
-Furthermore, the opposing slope signs of the radius valley around Sun-like and low mass
-stars has implications for where in the planetary parameter space one expects to find
-predominantly rocky and non-rocky planets. \autoref{fig:transition} highlights the region of interest for resolving
-the rocky to non-rocky transition in the $P-r_p$ space. This region is defined by the intermediate region between the
-radius valley slope measured in this work to the slope measured around Sun-like stars from the CKS sample \citep{martinez19}
-where the latter is first scaled
-from its median stellar mass of 1.01 M$_{\odot}$ to the median stellar mass of our sample (0.65 M$_{\odot}$) using the
-$M_s$-dependent scaling relation of the radius valley under photoevaporation \citep{wu19}.
-For reference, recall the measured slopes of
-$\text{d}r_p/\text{d}\log{P} = 0.085$ and $\text{d}\log{r_p}/\text{d}\log{P} = -0.11$ in the low mass and Sun-like stellar
-mass regimes respectively.
-
-The measured transitions from each stellar mass regime
-intersect at $P\sim 23.52$ days such that two regions of interest emerge and are bounded by
-
-\begin{equation}
-  r_p \in 
-  \begin{cases}
-        [r_{p,\text{valley,this work}}, r_{p,\text{valley,M19}}], & P < 23.52 \text{ days,} \\
-        [r_{p,\text{valley,M19}}, r_{p,\text{valley,this work}}], & P > 23.52 \text{ days.} \\
-  \end{cases}  \label{eq:transition}
-\end{equation}
-
-\noindent where
-
-\begin{align}
-  r_{p,\text{valley,this work}} &= 0.11\cdot \log_{10}(P)+1.52, \\
-  r_{p,\text{valley,M19}} &= -0.48\cdot \log_{10}(P)+2.32.
-\end{align}
-
-\noindent These subsets of the $P-r_p$ space define the regions of interest for resolving the
-  rocky to non-rocky transition around low mass stars. For example, at $P\lesssim 23.52$ days thermally driven
-  atmospheric mass loss, such as that from photoevaporation, predicts that planets in the set defined by
-  Eq.~\ref{eq:transition} should be predominantly rocky. Whereas the gas-poor formation scenario, whose predicted
-  radius valley slope differs in sign from that of thermally driven mass loss, predicts that those planets should be
-  predominantly non-rocky. These predictions can be robustly tested by targeting planets within the
-  Eq.~\ref{eq:transition} regions of interest and obtaining precise planetary bulk density measurements.
-  As seen in \autoref{fig:transition}, there are only $\sim 5$ planets in the region of interest with $\geq 3\sigma$ bulk
-  density measurements. These planets reveal the decrease in bulk density with increasing $r_p$ although insufficient
-  information is available to resolve a possibly sharp transition.
-  NASA's Transiting Exoplanet Survey Satellite \citep[\tess{;}][]{ricker15} has already identified eleven
-  TOIs\footnote{\tess{} Object-of-Interest.}
-  around stars with \teff{} $<4700$ K that satisfy Eq.~\ref{eq:transition} and should be targeted by RV
-  follow-up campaigns.\footnote{TOIs: 134.01 \citep{astudillodefru19}, 237.01, 260.01, 393.01, 544.01, 702.01, 807.01, 833.01,
-    836.02, 873.01, and 1075.01.} Note that all eleven planet candidates have $P<23.52$ days.
-
-\begin{figure}
-  \centering
-  \includegraphics[width=\hsize]{figures/fmapregion_bkgd_Msgt0d0_xbin39_ybin26.png}%
-  \hspace{-\hsize}%
-  \begin{ocg}{fig:off4pr}{fig:off4pr}{0}%
-  \end{ocg}%
-  \begin{ocg}{fig:on4pr}{fig:on4pr}{1}%
-  \includegraphics[width=\hsize]{figures/fmapregion_slope_Msgt0d0_xbin39_ybin26.png}%
-  \end{ocg}
-  \hspace{-\hsize}%
-  \begin{ocg}{fig:off1pr}{fig:off1pr}{0}%
-  \end{ocg}%
-  \begin{ocg}{fig:on1pr}{fig:on1pr}{1}%
-  \includegraphics[width=\hsize]{figures/fmapregion_planets_Msgt0d0_xbin39_ybin26.png}%
-  \end{ocg}
-  \hspace{-\hsize}%
-  \begin{ocg}{fig:off3pr}{fig:off3pr}{0}%
-  \end{ocg}%
-  \begin{ocg}{fig:on3pr}{fig:on3pr}{1}%
-  \includegraphics[width=\hsize]{figures/fmapregion_tois_Msgt0d0_xbin39_ybin26.png}%
-  \end{ocg}
-  \hspace{-\hsize}%
-  \caption{Regions of interest for resolving the transition between rocky and non-rocky planets
-    around low mass stars. The colormap depicts the occurrence rate of small close-in planets from
-    \autoref{fig:fmap}. The rocky to non-rocky transition measured in this work is highlighted
-    by the \emph{solid black line}. The transition measured around FGK stars from \cite{martinez19}
-    is highlighted by the \emph{dashed black line} after being scaled to the median stellar mass of
-    our sample. The \ToggleLayer{fig:on4pr,fig:off4pr}{\protect\cdbox{shaded regions}} bounded by
-    these curves represent the subset of the $P-r_p$ parameter space of interest for resolving
-    the transition around low mass stars with precise bulk density measurements. The eleven
-    \ToggleLayer{fig:on3pr,fig:off3pr}{\protect\cdbox{TOIs}}
-    that fall within this region are marked by an `x'. Also overplotted are
-    \ToggleLayer{fig:on1pr,fig:off1pr}{\protect\cdbox{planets}}
-    with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
-    a rocky (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
-    composition. Marker colors are indicative of the MAP planet bulk densities.}
-  \label{fig:transition}
-\end{figure}
-
-
 \subsection{Improving constraints on the sculpting of the radius valley using mid-M dwarfs} \label{sect:improve}
 The issue of having insufficient information to distinguish between photoevaporation, core-powered mass loss, and gas-poor
 formation around low mass stars can be addressed with two steps. Firstly, by expanding the low mass stellar sample in 
@@ -1382,7 +1284,7 @@ approximation given that its detection sensitivity has not yet been adequately c
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/rpuncertainty_TESSv2.png}
+  %\includegraphics[width=0.98\hsize]{figures/rpuncertainty_TESSv2.png}
   \caption{Expected improvement in the measurement precision of the radius valley location with the number of observed
     low mass stars. Measurement precision curves of the upper and lower uncertainties on the location of the radius valley 
     are derived from binomial statistics. These calculations use approximate and expected detection sensitivity
@@ -1450,6 +1352,108 @@ to reach $\sim 0.14$ R$_{\oplus}$ which would enable models of photoevaporation 
 core-powered mass low or gas-poor formation at $\sim 2.6\sigma$.
 
 
+\subsection{Implications for RV planet searches around low mass stars}
+Many existing and up-coming RV spectrographs
+will be partially focused on characterizing the masses of planets spanning the radius valley in order to
+improve our physical understanding of the nature of those planets. In particular, a subset of those spectrographs
+operating in the near-IR will focus heavily on M dwarf planetary systems
+(e.g. CARMENES; \citealt{quirrenbach14}, HPF; \citealt{mahadevan12}, IRD; \citealt{kotani14},
+NIRPS; \citealt{bouchy17}, SPIRou; \citealt{donati18}). In defining target samples
+that are equally complete on either side of the radius valley, it is critically important that the location
+of the transition between rocky and non-rocky planets is known. In our full stellar sample, which includes
+mid-to-late K dwarfs, the radius valley is centered at $1.54\pm 0.16$ R$_{\oplus}$. Although we remind the
+reader that the exact value is dependent on the planet's separation (see \autoref{fig:fmapF}). A consistent value of
+$1.55^{+0.52}_{-0.50}$ is also recovered---albeit with reduced significance---around stars later than about M2.5V.
+This value is slightly lower than the valley locations measured around Sun-like stars of
+$\sim 1.9$ R$_{\oplus}$ for $M_s \sim 1.2$ M$_{\odot}$ and $\sim 1.7$ R$_{\oplus}$ for $M_s \sim 0.85$ M$_{\odot}$
+\citep{fulton18}.
+
+Furthermore, the opposing slope signs of the radius valley around Sun-like and low mass
+stars has implications for where in the planetary parameter space one expects to find
+predominantly rocky and non-rocky planets. \autoref{fig:transition} highlights the region of interest for resolving
+the rocky to non-rocky transition in the $P-r_p$ space. This region is defined by the intermediate region between the
+radius valley slope measured in this work to the slope measured around Sun-like stars from the CKS sample \citep{martinez19}
+where the latter is first scaled
+from its median stellar mass of 1.01 M$_{\odot}$ to the median stellar mass of our sample (0.65 M$_{\odot}$) using the
+$M_s$-dependent scaling relation of the radius valley under photoevaporation \citep{wu19}.
+For reference, recall the measured slopes of
+$\text{d}r_p/\text{d}\log{P} = 0.11$ and $\text{d}\log{r_p}/\text{d}\log{P} = -0.11$ in the low mass and Sun-like stellar
+mass regimes respectively.
+
+The measured transitions from each stellar mass regime
+intersect at $P\sim 23.52$ days such that two regions of interest emerge and are bounded by
+
+\begin{equation}
+  r_p \in 
+  \begin{cases}
+        [r_{p,\text{valley,this work}}, r_{p,\text{valley,M19}}], & P < 23.52 \text{ days,} \\
+        [r_{p,\text{valley,M19}}, r_{p,\text{valley,this work}}], & P > 23.52 \text{ days.} \\
+  \end{cases}  \label{eq:transition}
+\end{equation}
+
+\noindent where
+
+\begin{align}
+  r_{p,\text{valley,this work}} &= 0.11\cdot \log_{10}(P)+1.52, \\
+  r_{p,\text{valley,M19}} &= -0.48\cdot \log_{10}(P)+2.32.
+\end{align}
+
+\noindent These subsets of the $P-r_p$ space define the regions of interest for resolving the
+  rocky to non-rocky transition around low mass stars. For example, at $P\lesssim 23.52$ days thermally driven
+  atmospheric mass loss, such as that from photoevaporation, predicts that planets in the set defined by
+  Eq.~\ref{eq:transition} should be predominantly rocky. Whereas the gas-poor formation scenario, whose predicted
+  radius valley slope differs in sign from that of thermally driven mass loss, predicts that those planets should be
+  predominantly non-rocky. These predictions can be robustly tested by targeting planets within the
+  Eq.~\ref{eq:transition} regions of interest and obtaining precise planetary bulk density measurements.
+  As seen in \autoref{fig:transition}, there are only $\sim 5$ planets in the region of interest with $\geq 3\sigma$ bulk
+  density measurements. These planets reveal the decrease in bulk density with increasing $r_p$ although insufficient
+  information is available to resolve a possibly sharp transition.
+  NASA's Transiting Exoplanet Survey Satellite \citep[\tess{;}][]{ricker15} has already identified eleven
+  TOIs\footnote{\tess{} Object-of-Interest.}
+  around stars with \teff{} $<4700$ K that satisfy Eq.~\ref{eq:transition} and should be targeted by RV
+  follow-up campaigns.\footnote{TOIs: 134.01 \citep{astudillodefru19}, 237.01, 260.01, 393.01, 544.01, 702.01, 807.01, 833.01,
+    836.02, 873.01, and 1075.01.} Note that all eleven planet candidates have $P<23.52$ days.
+
+\begin{figure}
+  \centering
+  %\includegraphics[width=\hsize]{figures/fmapregion_bkgd_Msgt0d0_xbin39_ybin26.png}%
+  \hspace{-\hsize}%
+  \begin{ocg}{fig:off4pr}{fig:off4pr}{0}%
+  \end{ocg}%
+  \begin{ocg}{fig:on4pr}{fig:on4pr}{1}%
+  %\includegraphics[width=\hsize]{figures/fmapregion_slope_Msgt0d0_xbin39_ybin26.png}%
+  \end{ocg}
+  \hspace{-\hsize}%
+  \begin{ocg}{fig:off1pr}{fig:off1pr}{0}%
+  \end{ocg}%
+  \begin{ocg}{fig:on1pr}{fig:on1pr}{1}%
+  %\includegraphics[width=\hsize]{figures/fmapregion_planets_Msgt0d0_xbin39_ybin26.png}%
+  \end{ocg}
+  \hspace{-\hsize}%
+  \begin{ocg}{fig:off3pr}{fig:off3pr}{0}%
+  \end{ocg}%
+  \begin{ocg}{fig:on3pr}{fig:on3pr}{1}%
+  %\includegraphics[width=\hsize]{figures/fmapregion_tois_Msgt0d0_xbin39_ybin26.png}%
+  \end{ocg}
+  \hspace{-\hsize}%
+  \caption{Regions of interest for resolving the transition between rocky and non-rocky planets
+    around low mass stars. The colormap depicts the occurrence rate of small close-in planets from
+    \autoref{fig:fmap}. The rocky to non-rocky transition measured in this work is highlighted
+    by the \emph{solid black line}. The transition measured around FGK stars from \cite{martinez19}
+    is highlighted by the \emph{dashed black line} after being scaled to the median stellar mass of
+    our sample. The \ToggleLayer{fig:on4pr,fig:off4pr}{\protect\cdbox{shaded regions}} bounded by
+    these curves represent the subset of the $P-r_p$ parameter space of interest for resolving
+    the transition around low mass stars with precise bulk density measurements. The eleven
+    \ToggleLayer{fig:on3pr,fig:off3pr}{\protect\cdbox{TOIs}}
+    that fall within this region are marked by an `x'. Also overplotted are
+    \ToggleLayer{fig:on1pr,fig:off1pr}{\protect\cdbox{planets}}
+    with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
+    a rocky (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
+    composition. Marker colors are indicative of the MAP planet bulk densities.}
+  \label{fig:transition}
+\end{figure}
+
+
 \subsection{Imperfect clearing of the radius valley} \label{sect:void}
 As noted in Sect.~\ref{sect:fmap} and evidenced in \autoref{fig:fmap}, the radius valley is not completely
 void of confirmed planets. If the radius valley around low mass stars is produced solely from the late formation
@@ -1494,7 +1498,7 @@ using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are
 \item The radius valley structure in the occurrence rate of small close-in planets---previously resolved around
   Sun-like stars---is demonstrated to persist around low mass stars (i.e. mid-K to mid-M dwarfs).
 \item The radius valley around low mass stars exhibits a negative slope with insolation
-  ($\text{d}r_p / \text{d}\log{F} = -0.123\pm 0.054$) unlike 
+  ($\text{d}r_p / \text{d}\log{F} = -0.12\pm 0.05$) unlike 
   around Sun-like stars whose measured slope is positive
   \citep[$\text{d}\log{r_p} / \text{d}\log{F} = 0.12\pm 0.02$]{martinez19}. This result 
   supports models of gas-poor terrestrial planet formation without invoking atmospheric escape from photoevaporation,
