need to revise slope measurements in the text

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -208,14 +208,14 @@ Sect.~\ref{sect:discussion} presents a discussion of our results
 and its implications with a summary of our main findings being presented in Sect.~\ref{sect:conclusions}.
 
 
-\section{Low Mass Dwarf Stellar Sample} \label{sect:stars}
+\section{Low mass dwarf stellar sample} \label{sect:stars}
 The goal of this study is to extend measurements of the occurrence rate of close-in planets to planetary systems hosted
 by low mass dwarf stars with effective temperatures \teff{} $<4700$ K: the lower limit of \teff{}
 considered in the California Kepler Survey \citep[CKS;][]{fulton17}.
 This adopted temperature threshold approximately corresponds to spectral types later than
 K3.5V \citep{pecaut13}. In the following subsections we define our stellar samples from each of \kepler{} or \ktwo{.}
 
-\subsection{Kepler Stellar Sample} \label{sect:kep}
+\subsection{Kepler stellar sample} \label{sect:kep}
 Following the release of \gaia{} DR2 \citep{lindegren18}, \cite{berger18} cross-matched \kepler{} target stars
 with DR2 and compiled a catalog of stellar
 parallaxes $\varpi$, 2MASS $K_s$-band magnitudes, and spectroscopic measurements of \teff{,} \logg{,} and [Fe/H]
@@ -275,7 +275,7 @@ $M_s$ is $\sim 5.5$\%.
   \label{fig:stars}
 \end{figure}
 
-\subsection{K2 Stellar Sample}
+\subsection{K2 stellar sample}
 We first retrieved the list of probable low mass dwarf stars observed in any \ktwo{} campaign by querying
 MAST\footnote{Mikulski Archive for Space Telescopes, \url{https://archive.stsci.edu/k2/}.}. Our initial
 search was restricted to \ktwo{} stars with \teff{} $<4900$ K, \logg{} $>4$, and $R_s<1$ R$_{\odot}$. Note that these
@@ -354,7 +354,7 @@ fact will have important implications on our ability to precisely measure the pl
 rate around the lowest mass stars in our sample.
 
 
-\section{Population of Small Close-in Planets around Low Mass Dwarf Stars} \label{sect:planets}
+\section{Population of small close-in planets around low mass dwarf stars} \label{sect:planets}
 Here we define the population of small close-in planets orbiting stars contained in our stellar sample.
 Our initial sample of transiting planets from either \kepler{} or \ktwo{} were retrieved from the
 NASA Exoplanet Archive \citep{akeson13} on June 15, 2019. Only confirmed
@@ -434,14 +434,14 @@ significant subset of confirmed planets between 1.5-1.8 R$_{\oplus}$ with period
 the mechanism responsible for producing the radius valley might not be as efficient as it is when operating on planetary
 systems around Sun-like stars.
 
-\section{Transiting Planet Detection Completeness}  \label{sect:completeness}
+\section{Transiting planet detection completeness}  \label{sect:completeness}
 Derivation of the planet occurrence rate requires the empirical distribution of planet detections to be corrected
 for imperfect survey completeness. The completeness correction is treated separately for each subset
 of planets from \kepler{} or \ktwo{} in the following subsections. Each set of corrections is designed to account
 for detection biases arising from the imperfect transit detection sensitivity and for the 
 geometric probability of a planetary transit to occur.
 
-\subsection{Kepler Sensitivity} \label{sect:kepsens}
+\subsection{Kepler sensitivity} \label{sect:kepsens}
 The derivation of the \kepler{} planet detection sensitivity follows from the methodology outlined in
 \cite{christiansen16} and used by \cite{fulton17} to resolve the radius valley around FGK stars. Per-target
 \kepler{} completeness products for DR25 and the SOC 9.3 version of the \kepler{} pipeline
@@ -506,7 +506,7 @@ are shown in \autoref{fig:senscurves}.
 \end{figure}
 
 
-\subsection{K2 Sensitivity} \label{sect:k2sens}
+\subsection{K2 sensitivity} \label{sect:k2sens}
 Unlike the primary \kepler{} mission, the \ktwo{} data products do not feature detailed completeness and reliability
 products. To derive the detection sensitivity among the \ktwo{} stars in our sample we employ the transit detection
 pipeline \texttt{ORION} \citep{cloutier19b}.
@@ -603,7 +603,7 @@ averaged over the index $n$, are shown in \autoref{fig:sensmap}.
 \end{figure*}
 
 
-\subsection{Survey Completeness} \label{sect:comp}
+\subsection{Survey completeness} \label{sect:comp}
 Only transiting planets are detectable in transit surveys. To correct for the non-detection of otherwise
 detectable but non-transiting planets we compute
 the geometric transit probability for each star $n$ and at each grid cell $ij$ in the $P-r_p$ space to be
@@ -630,7 +630,7 @@ shown in \autoref{fig:compmap}.
 \end{figure*}
 
 
-\section{The Occurrence Rate of Small Close-in Planets around Low Mass Dwarf Stars} \label{sect:occurrence}
+\section{The occurrence rate of small close-in planets around low mass dwarf stars} \label{sect:occurrence}
 \subsection{Occurrence rates versus orbital period and planet radius} \label{sect:fmap}
 The detection and validation of planets from the \kepler{} and \ktwo{} missions enables the measurement of the
 occurrence rate of planets given the completeness corrections derived in Sect.~\ref{sect:completeness}.
